fix css for about section to make more responive, remove the row container as it was adding too much space around the image

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -9,6 +9,8 @@
     flex-direction: column;
     align-items: center;
     gap: 2rem;
+    margin: 2rem 0;
+    padding: 0 1rem;
 }
 
 .about_me {
@@ -81,14 +83,25 @@
 
 /* Media Queries (Medium Devices) */
 @media screen and (max-width: 1024px) {
+    .about_container {
+        grid-template-columns: 1fr;
+        gap: 0;
+    }
+
     .about_me {
-        width: 80%;
+        width: 50%;
+        margin: 2rem auto;
+    }
+
+    .about_content p {
+        margin: 1rem 0;
     }
 }
 
 /* Media Queries (Small Devices) */
 @media screen and (max-width: 600px) {
     .about_me {
-        width: 90%;
+        width: 65%;
+        margin: 0 auto;
     }
 }
